src/main/gen/com/github/floralvikings/godotea/language/gdscript/parser/GDScriptParser.java
// This is a generated file. Not intended for manual editing.
package com.github.floralvikings.godotea.language.gdscript.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.github.floralvikings.godotea.language.gdscript.psi.GDScriptTypes.*;
import static com.github.floralvikings.godotea.language.gdscript.parser.GDScriptParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class GDScriptParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return root(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(ARRAY_EXPRESSION, DICTIONARY_EXPRESSION, EXPRESSION, INVOCATION_EXPRESSION,
      LAMBDA_EXPRESSION, LUA_DICTIONARY_EXPRESSION, PAREN_EXPRESSION),
  };

  /* ********************************************************** */
  // (VAR? expression) | DOT_DOT | UNDERSCORE
  public static boolean array_argument(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_argument")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARRAY_ARGUMENT, "<array argument>");
    r = array_argument_0(b, l + 1);
    if (!r) r = consumeToken(b, DOT_DOT);
    if (!r) r = consumeToken(b, UNDERSCORE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // VAR? expression
  private static boolean array_argument_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_argument_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = array_argument_0_0(b, l + 1);
    r = r && expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // VAR?
  private static boolean array_argument_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_argument_0_0")) return false;
    consumeToken(b, VAR);
    return true;
  }

  /* ********************************************************** */
  // id? L_BRACKET LINE_BREAK* array_argument? LINE_BREAK* (COMMA LINE_BREAK* array_argument LINE_BREAK*)* COMMA? LINE_BREAK* R_BRACKET
  public static boolean array_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_expression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARRAY_EXPRESSION, "<array expression>");
    r = array_expression_0(b, l + 1);
    r = r && consumeToken(b, L_BRACKET);
    r = r && array_expression_2(b, l + 1);
    r = r && array_expression_3(b, l + 1);
    r = r && array_expression_4(b, l + 1);
    r = r && array_expression_5(b, l + 1);
    r = r && array_expression_6(b, l + 1);
    r = r && array_expression_7(b, l + 1);
    r = r && consumeToken(b, R_BRACKET);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // id?
  private static boolean array_expression_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_expression_0")) return false;
    id(b, l + 1);
    return true;
  }

  // LINE_BREAK*
  private static boolean array_expression_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_expression_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, LINE_BREAK)) break;
      if (!empty_element_parsed_guard_(b, "array_expression_2", c)) break;
    }
    return true;
  }

  // array_argument?
  private static boolean array_expression_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_expression_3")) return false;
    array_argument(b, l + 1);
    return true;
  }

  // LINE_BREAK*
  private static boolean array_expression_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_expression_4")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, LINE_BREAK)) break;
      if (!empty_element_parsed_guard_(b, "array_expression_4", c)) break;
    }
    return true;
  }

  // (COMMA LINE_BREAK* array_argument LINE_BREAK*)*
  private static boolean array_expression_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_expression_5")) return false;
    while (true) {
      int c = current_position_(b);
      if (!array_expression_5_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "array_expression_5", c)) break;
    }
    return true;
  }

  // COMMA LINE_BREAK* array_argument LINE_BREAK*
  private static boolean array_expression_5_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_expression_5_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && array_expression_5_0_1(b, l + 1);
    r = r && array_argument(b, l + 1);
    r = r && array_expression_5_0_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // LINE_BREAK*
  private static boolean array_expression_5_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_expression_5_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, LINE_BREAK)) break;
      if (!empty_element_parsed_guard_(b, "array_expression_5_0_1", c)) break;
    }
    return true;
  }

  // LINE_BREAK*
  private static boolean array_expression_5_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_expression_5_0_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, LINE_BREAK)) break;
      if (!empty_element_parsed_guard_(b, "array_expression_5_0_3", c)) break;
    }
    return true;
  }

  // COMMA?
  private static boolean array_expression_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_expression_6")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  // LINE_BREAK*
  private static boolean array_expression_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_expression_7")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, LINE_BREAK)) break;
      if (!empty_element_parsed_guard_(b, "array_expression_7", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // L_BRACKET [pattern [(COMMA pattern)+] (COMMA DOT_DOT)?]  R_BRACKET
  public static boolean array_pattern(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_pattern")) return false;
    if (!nextTokenIs(b, L_BRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, L_BRACKET);
    r = r && array_pattern_1(b, l + 1);
    r = r && consumeToken(b, R_BRACKET);
    exit_section_(b, m, ARRAY_PATTERN, r);
    return r;
  }

  // [pattern [(COMMA pattern)+] (COMMA DOT_DOT)?]
  private static boolean array_pattern_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_pattern_1")) return false;
    array_pattern_1_0(b, l + 1);
    return true;
  }

  // pattern [(COMMA pattern)+] (COMMA DOT_DOT)?
  private static boolean array_pattern_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_pattern_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = pattern(b, l + 1);
    r = r && array_pattern_1_0_1(b, l + 1);
    r = r && array_pattern_1_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [(COMMA pattern)+]
  private static boolean array_pattern_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_pattern_1_0_1")) return false;
    array_pattern_1_0_1_0(b, l + 1);
    return true;
  }

  // (COMMA pattern)+
  private static boolean array_pattern_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_pattern_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = array_pattern_1_0_1_0_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!array_pattern_1_0_1_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "array_pattern_1_0_1_0", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // COMMA pattern
  private static boolean array_pattern_1_0_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_pattern_1_0_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && pattern(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA DOT_DOT)?
  private static boolean array_pattern_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_pattern_1_0_2")) return false;
    array_pattern_1_0_2_0(b, l + 1);
    return true;
  }

  // COMMA DOT_DOT
  private static boolean array_pattern_1_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_pattern_1_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, COMMA, DOT_DOT);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // id (L_BRACKET id R_BRACKET)
  static boolean array_type(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_type")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = id(b, l + 1);
    r = r && array_type_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // L_BRACKET id R_BRACKET
  private static boolean array_type_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_type_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, L_BRACKET);
    r = r && id(b, l + 1);
    r = r && consumeToken(b, R_BRACKET);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ASSERT L_PAREN expression [COMMA string] R_PAREN
  public static boolean assert_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assert_statement")) return false;
    if (!nextTokenIs(b, ASSERT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, ASSERT, L_PAREN);
    r = r && expression(b, l + 1);
    r = r && assert_statement_3(b, l + 1);
    r = r && consumeToken(b, R_PAREN);
    exit_section_(b, m, ASSERT_STATEMENT, r);
    return r;
  }

  // [COMMA string]
  private static boolean assert_statement_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assert_statement_3")) return false;
    assert_statement_3_0(b, l + 1);
    return true;
  }

  // COMMA string
  private static boolean assert_statement_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assert_statement_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && string(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // EQUAL
  //     | PLUS_EQUAL
  //     | MINUS_EQUAL
  //     | STAR_EQUAL
  //     | SLASH_EQUAL
  //     | PERCENT_EQUAL
  //     | LESS_LESS_EQUAL
  //     | GREATER_GREATER_EQUAL
  //     | AMPERSAND_EQUAL
  //     | PIPE_EQUAL
  //     | CARET_EQUAL
  //     | INFER
  public static boolean assign_operator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assign_operator")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGN_OPERATOR, "<assign operator>");
    r = consumeToken(b, EQUAL);
    if (!r) r = consumeToken(b, PLUS_EQUAL);
    if (!r) r = consumeToken(b, MINUS_EQUAL);
    if (!r) r = consumeToken(b, STAR_EQUAL);
    if (!r) r = consumeToken(b, SLASH_EQUAL);
    if (!r) r = consumeToken(b, PERCENT_EQUAL);
    if (!r) r = consumeToken(b, LESS_LESS_EQUAL);
    if (!r) r = consumeToken(b, GREATER_GREATER_EQUAL);
    if (!r) r = consumeToken(b, AMPERSAND_EQUAL);
    if (!r) r = consumeToken(b, PIPE_EQUAL);
    if (!r) r = consumeToken(b, CARET_EQUAL);
    if (!r) r = consumeToken(b, INFER);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // expression assign_operator [AWAIT] expression
  public static boolean assign_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assign_statement")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGN_STATEMENT, "<assign statement>");
    r = expression(b, l + 1);
    r = r && assign_operator(b, l + 1);
    r = r && assign_statement_2(b, l + 1);
    r = r && expression(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [AWAIT]
  private static boolean assign_statement_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assign_statement_2")) return false;
    consumeToken(b, AWAIT);
    return true;
  }

  /* ********************************************************** */
  // AWAIT expression
  public static boolean await_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "await_statement")) return false;
    if (!nextTokenIs(b, AWAIT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AWAIT);
    r = r && expression(b, l + 1);
    exit_section_(b, m, AWAIT_STATEMENT, r);
    return r;
  }

  /* ********************************************************** */
  // VAR IDENTIFIER
  public static boolean binding_pattern(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binding_pattern")) return false;
    if (!nextTokenIs(b, VAR)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, VAR, IDENTIFIER);
    exit_section_(b, m, BINDING_PATTERN, r);
    return r;
  }

  /* ********************************************************** */
  // <<indented <<listOf (&INDEQ script_statement) end_of_block_statement>>>>
  public static boolean block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BLOCK, "<block>");
    r = indented(b, l + 1, block_0_0_parser_);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // &INDEQ script_statement
  private static boolean block_0_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_0_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = block_0_0_0_0(b, l + 1);
    r = r && script_statement(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // &INDEQ
  private static boolean block_0_0_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_0_0_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _AND_);
    r = indEq(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // <<indented (GET COLON LINE_BREAK block)>>
  public static boolean block_get(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_get")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BLOCK_GET, "<block get>");
    r = indented(b, l + 1, GDScriptParser::block_get_0_0);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // GET COLON LINE_BREAK block
  private static boolean block_get_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_get_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, GET, COLON, LINE_BREAK);
    r = r && block(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // <<indented (SET L_PAREN function_parameter R_PAREN COLON LINE_BREAK block)>>
  public static boolean block_set(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_set")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BLOCK_SET, "<block set>");
    r = indented(b, l + 1, GDScriptParser::block_set_0_0);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // SET L_PAREN function_parameter R_PAREN COLON LINE_BREAK block
  private static boolean block_set_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_set_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, SET, L_PAREN);
    r = r && function_parameter(b, l + 1);
    r = r && consumeTokens(b, 0, R_PAREN, COLON, LINE_BREAK);
    r = r && block(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
